lib/src/nirsit/sdk/nirsit_sdk_bindings.dart

// ignore_for_file: unused_element, unnecessary_brace_in_string_interps
import 'dart:ffi';

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

class NirsitSdkBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NirsitSdkBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NirsitSdkBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  double testDouble() {
    return _testDouble();
  }

  late final _testDoublePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function()>>('testDouble');
  late final _testDouble = _testDoublePtr.asFunction<double Function()>();

  void initialized(int protocolType) {
    return _initialized(protocolType);
  }

  late final _initializedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('initialized');
  late final _initialized = _initializedPtr.asFunction<void Function(int)>();

  void clear() {
    return _clear();
  }

  late final _clearPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'clear',
  );
  late final _clear = _clearPtr.asFunction<void Function()>();

  void clearRecentData() {
    return _clearRecentData();
  }

  late final _clearRecentDataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('clearRecentData');
  late final _clearRecentData = _clearRecentDataPtr
      .asFunction<void Function()>();

  void initChannelRejectFlag() {
    return _initChannelRejectFlag();
  }

  late final _initChannelRejectFlagPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('initChannelRejectFlag');
  late final _initChannelRejectFlag = _initChannelRejectFlagPtr
      .asFunction<void Function()>();

  void setDSPOption(int option) {
    return _setDSPOption(option);
  }

  late final _setDSPOptionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UnsignedChar)>>(
        'setDSPOption',
      );
  late final _setDSPOption = _setDSPOptionPtr.asFunction<void Function(int)>();

  void setSnrLimit(int snrLimit) {
    return _setSnrLimit(snrLimit);
  }

  late final _setSnrLimitPtr =
  _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
    'setSnrLimit',
  );
  late final _setSnrLimit = _setSnrLimitPtr.asFunction<void Function(int)>();

  void setPDGainIndex(ffi.Pointer<ffi.Char> idxdata) {
    return _setPDGainIndex(idxdata);
  }

  late final _setPDGainIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'setPDGainIndex',
      );
  late final _setPDGainIndex = _setPDGainIndexPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void measureRawData(ffi.Pointer<ffi.Double> rawdata) {
    return _measureRawData(rawdata);
  }

  late final _measureRawDataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Double>)>>(
        'measureRawData',
      );
  late final _measureRawData = _measureRawDataPtr
      .asFunction<void Function(ffi.Pointer<ffi.Double>)>();

  void measure(
    ffi.Pointer<ffi.Double> rawdata_780,
    ffi.Pointer<ffi.Double> rawdata_850,
  ) {
    return _measure(rawdata_780, rawdata_850);
  }

  late final _measurePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)
        >
      >('measure');
  late final _measure = _measurePtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)
      >();

  void calibrationRawData(ffi.Pointer<ffi.Double> rawdata) {
    return _calibrationRawData(rawdata);
  }

  late final _calibrationRawDataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Double>)>>(
        'calibrationRawData',
      );
  late final _calibrationRawData = _calibrationRawDataPtr
      .asFunction<void Function(ffi.Pointer<ffi.Double>)>();

  void calibration(
    ffi.Pointer<ffi.Double> rawdata_780,
    ffi.Pointer<ffi.Double> rawdata_850,
  ) {
    return _calibration(rawdata_780, rawdata_850);
  }

  late final _calibrationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)
        >
      >('calibration');
  late final _calibration = _calibrationPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)
      >();

  void addSNRRecentData() {
    return _addSNRRecentData();
  }

  late final _addSNRRecentDataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('addSNRRecentData');
  late final _addSNRRecentData = _addSNRRecentDataPtr
      .asFunction<void Function()>();

  void snrCalculation(int snrLimit) {
    return _snrCalculation(snrLimit);
  }

  late final _snrCalculationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('snrCalculation');
  late final _snrCalculation = _snrCalculationPtr
      .asFunction<void Function(int)>();

  GainSNRResult getGainSNR() {
    return _getGainSNR();
  }

  late final _getGainSNRPtr =
      _lookup<ffi.NativeFunction<GainSNRResult Function()>>('getGainSNR');
  late final _getGainSNR = _getGainSNRPtr
      .asFunction<GainSNRResult Function()>();

  DoubleArrayResult getHbO2() {
    return _getHbO2();
  }

  late final _getHbO2Ptr =
      _lookup<ffi.NativeFunction<DoubleArrayResult Function()>>('getHbO2');
  late final _getHbO2 = _getHbO2Ptr.asFunction<DoubleArrayResult Function()>();

  DoubleArrayResult getHbR() {
    return _getHbR();
  }

  late final _getHbRPtr =
      _lookup<ffi.NativeFunction<DoubleArrayResult Function()>>('getHbR');
  late final _getHbR = _getHbRPtr.asFunction<DoubleArrayResult Function()>();

  IntArrayResult getRSO2() {
    return _getRSO2();
  }

  late final _getRSO2Ptr =
      _lookup<ffi.NativeFunction<IntArrayResult Function()>>('getRSO2');
  late final _getRSO2 = _getRSO2Ptr.asFunction<IntArrayResult Function()>();

  void freeGainSNRData(GainSNRResult result) {
    return _freeGainSNRData(result);
  }

  late final _freeGainSNRDataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GainSNRResult)>>(
        'freeGainSNRData',
      );
  late final _freeGainSNRData = _freeGainSNRDataPtr
      .asFunction<void Function(GainSNRResult)>();

  void freeDoubleArrayResult(DoubleArrayResult result) {
    return _freeDoubleArrayResult(result);
  }

  late final _freeDoubleArrayResultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DoubleArrayResult)>>(
        'freeDoubleArrayResult',
      );
  late final _freeDoubleArrayResult = _freeDoubleArrayResultPtr
      .asFunction<void Function(DoubleArrayResult)>();

  void freeIntArrayResult(IntArrayResult result) {
    return _freeIntArrayResult(result);
  }

  late final _freeIntArrayResultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(IntArrayResult)>>(
        'freeIntArrayResult',
      );
  late final _freeIntArrayResult = _freeIntArrayResultPtr
      .asFunction<void Function(IntArrayResult)>();
}

/// @brief getGainSNR의 반환값을 담는 구조체 (int 배열 2개)
final class GainSNRResult extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> data_780;

  @ffi.Int()
  external int length_780;

  external ffi.Pointer<ffi.Int32> data_850;

  @ffi.Int()
  external int length_850;
}

/// @brief double 배열 1개를 반환하기 위한 구조체
final class DoubleArrayResult extends ffi.Struct {
  external ffi.Pointer<ffi.Double> data;

  @ffi.Int()
  external int length;
}

/// @brief int 배열 1개를 반환하기 위한 구조체
final class IntArrayResult extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> data;

  @ffi.Int()
  external int length;
}
